fix(*): 修复项目启动问题和配置优化
- 修复Redis配置，使用Jackson序列化
- 迁移javax到jakarta包（Spring Boot 3.x兼容）
- 修复S3存储服务端点配置
- 添加文件存储和标准Redis配置
- 添加SpringDoc OpenAPI依赖
- 优化代码结构和注释不必要的代码

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>